refactor: Encapsulate SonarJava in sorald.sonar subpackage (#582)
* Use full string key for sonar rules

Squash of issue/580-use-full-string-key

* Extract nested CheckType enum into separate RuleType

* Move RuleViolation to sorald.rule package

* Remove use of JavaFileScanner throughout production code

* Make RuleVerifier package private

* Make Checks package-private