@@ -2,7 +2,6 @@ package sorald.processor;
 
 import java.io.File;
 import java.io.IOException;
-import java.lang.reflect.InvocationTargetException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -15,14 +14,13 @@ import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Stream;
-import org.sonar.java.checks.SynchronizationOnStringOrBoxedCheck;
-import org.sonar.plugins.java.api.JavaFileScanner;
+import sorald.Assertions;
 import sorald.Constants;
 import sorald.Main;
 import sorald.PrettyPrintingStrategy;
 import sorald.TestHelper;
-import sorald.sonar.Checks;
-import sorald.sonar.RuleVerifier;
+import sorald.rule.Rule;
+import sorald.sonar.SonarRule;
 
 /** Helper functions for {@link ProcessorTest}. */
 public class ProcessorTestHelper {
@@ -33,8 +31,8 @@ public class ProcessorTestHelper {
     static final String EXACT_MATCH_FILE_SUFFIX = ".exact";
     static final String EXACT_MATCH_DELIMITER = "###";
     // The processors related to these checks currently cause problems with the sniper printer
-    static final List<Class<?>> BROKEN_WITH_SNIPER =
-            Arrays.asList(SynchronizationOnStringOrBoxedCheck.class);
+    static final List<Rule> BROKEN_WITH_SNIPER =
+            List.of(new SonarRule(new SynchronizationOnStringOrBoxedProcessor().getRuleKey()));
 
     /**
      * Create a {@link ProcessorTestCase} from a non-compliant (according to SonarQube rules) Java
@@ -54,14 +52,11 @@ public class ProcessorTestHelper {
      *     SonarQube rule.
      * @return A {@link ProcessorTestCase} for the given Java file.
      */
-    @SuppressWarnings("unchecked")
-    static <T extends JavaFileScanner> ProcessorTestCase<T> toProcessorTestCase(
-            File nonCompliantFile) {
+    static ProcessorTestCase toProcessorTestCase(File nonCompliantFile) {
         File directory = nonCompliantFile.getParentFile();
         assert directory.isDirectory();
         String ruleKey = directory.getName().split("_")[0];
-        Class<T> checkClass = (Class<T>) Checks.getCheck(ruleKey);
-        String ruleName = checkClass.getSimpleName().replaceFirst("Check$", "");
+        String ruleName = Rule.of(ruleKey).getName();
         String outfileDirRelpath =
                 parseSourceFilePackage(nonCompliantFile.toPath()).replace(".", File.separator);
         Path outfileRelpath = Paths.get(outfileDirRelpath).resolve(nonCompliantFile.getName());
@@ -76,8 +71,8 @@ public class ProcessorTestHelper {
                         .map(ProcessorTestHelper::parseExactMatches)
                         .orElse(new ArrayList<>());
 
-        return new ProcessorTestCase<>(
-                ruleName, ruleKey, nonCompliantFile, checkClass, outfileRelpath, exactMatches);
+        return new ProcessorTestCase(
+                ruleName, ruleKey, nonCompliantFile, outfileRelpath, exactMatches);
     }
 
     /** Parse exact match blocks from an exact match file. */
@@ -132,7 +127,7 @@ public class ProcessorTestHelper {
      * @param testFilesRoot Root of a test files directory.
      * @return A stream of {@link ProcessorTestCase}
      */
-    public static Stream<ProcessorTestCase<?>> getTestCaseStream(File testFilesRoot) {
+    public static Stream<ProcessorTestCase> getTestCaseStream(File testFilesRoot) {
         return Arrays.stream(testFilesRoot.listFiles())
                 .filter(File::isDirectory)
                 .map(File::listFiles)
@@ -164,33 +159,29 @@ public class ProcessorTestHelper {
      * directory to facilitate tests that produce artifacts (e.g. compilation) or change the files
      * (e.g. repairing).
      */
-    public static Stream<ProcessorTestCase<?>> getTestCasesInTemporaryDirectory()
-            throws IOException {
+    public static Stream<ProcessorTestCase> getTestCasesInTemporaryDirectory() throws IOException {
         return getTestCaseStream(TestHelper.createTemporaryProcessorTestFilesWorkspace().toFile());
     }
 
     /** Run sorald on the given test case. */
-    public static void runSorald(ProcessorTestCase<?> testCase, String... extraArgs)
-            throws Exception {
-        RuleVerifier.verifyHasIssue(
-                testCase.nonCompliantFile.getAbsolutePath(), testCase.createCheckInstance());
-        runSorald(testCase.nonCompliantFile, testCase.checkClass, extraArgs);
+    public static void runSorald(ProcessorTestCase testCase, String... extraArgs) throws Exception {
+        Assertions.assertHasRuleViolation(testCase.nonCompliantFile, testCase.getRule());
+        runSorald(testCase.nonCompliantFile, testCase.getRule(), extraArgs);
     }
 
     /** Run sorald on the given file with the given checkClass * */
-    public static void runSorald(
-            File originaFilesPath, Class<? extends JavaFileScanner> checkClass, String... extraArgs)
+    public static void runSorald(File originaFilesPath, Rule rule, String... extraArgs)
             throws Exception {
         String originalFileAbspath = originaFilesPath.getAbsolutePath();
 
-        boolean brokenWithSniper = BROKEN_WITH_SNIPER.contains(checkClass);
+        boolean brokenWithSniper = BROKEN_WITH_SNIPER.contains(rule);
         var coreArgs =
                 new String[] {
                     Constants.REPAIR_COMMAND_NAME,
                     Constants.ARG_SOURCE,
                     originalFileAbspath,
                     Constants.ARG_RULE_KEY,
-                    Checks.getRuleKey(checkClass),
+                    rule.getKey(),
                     Constants.ARG_PRETTY_PRINTING_STRATEGY,
                     brokenWithSniper
                             ? PrettyPrintingStrategy.NORMAL.name()
@@ -205,11 +196,10 @@ public class ProcessorTestHelper {
      * A wrapper class to hold the information required to execute a test case for a single file and
      * rule with the associated processor.
      */
-    public static class ProcessorTestCase<T extends JavaFileScanner> {
+    public static class ProcessorTestCase {
         public final String ruleName;
         public final String ruleKey;
         public final File nonCompliantFile;
-        public final Class<T> checkClass;
         public final Path outfileRelpath;
         private final List<String> expectedExactMatches;
 
@@ -217,13 +207,11 @@ public class ProcessorTestHelper {
                 String ruleName,
                 String ruleKey,
                 File nonCompliantFile,
-                Class<T> checkClass,
                 Path outfileRelpath,
                 List<String> expectedExactMatches) {
             this.ruleName = ruleName;
             this.ruleKey = ruleKey;
             this.nonCompliantFile = nonCompliantFile;
-            this.checkClass = checkClass;
             this.outfileRelpath = outfileRelpath;
             this.expectedExactMatches = new ArrayList<>(expectedExactMatches);
         }
@@ -236,12 +224,6 @@ public class ProcessorTestHelper {
                     + ruleName
                     + " source="
                     + nonCompliantFile.getName();
-        }
-
-        public T createCheckInstance()
-                throws NoSuchMethodException, IllegalAccessException, InvocationTargetException,
-                        InstantiationException {
-            return checkClass.getConstructor().newInstance();
         }
 
         public Optional<File> expectedOutfile() {
@@ -260,6 +242,10 @@ public class ProcessorTestHelper {
 
         public List<String> getExpectedExactMatches() {
             return Collections.unmodifiableList(expectedExactMatches);
+        }
+
+        public Rule getRule() {
+            return new SonarRule(ruleKey);
         }
     }
 }
